src/index.css
:root {
  margin: 0;
  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
    sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;


  --color-bkg: #E9F1F7;
  --color-primary: #623CEA;
  --color-secondary: #e7dfc6;
  --color-confirm: #D0EFB1;
  --color-danger: #F78154;
  --dark-color-bkg: #221D23;
  --dark-color-primary: #D6FFF6;
  --dark-color-secondary: #231651;
}

body {
  background-color: var(--color-bkg);
  color: #000;
}

.bold {
  font-weight: bold;
}

.button {
  display: inline-block;
  border: none;
  background-color: var(--color-primary);
  color: #fff;
  font-weight: 700;
  border-radius: 5px;
  width: 10em;
  height: 3em;
  transition: all .2s cubic-bezier(0.25, 0.46, 0.45, 0.94);
}

.button:hover {
  background-color: var(--color-secondary);
  color: #000;
}
.learn {
  background-color: var(--color-confirm);
  color: #000;
}

.title-container {
  display: flex;
  align-items: baseline;
  flex-flow: column;
}

.title {
  font-size: 40px;
}

.title-container .button {
  position: relative;
  top: -4em;
  left: 60em;
}

.title-container subtitle {
  flex: 2;
}

.post-container {
  display: flex;
  flex-flow: column;
}

.post-container .title {
  font-size: 30px;
  padding-bottom: none;
}
.navbar-container {
  overflow: hidden;
  background-color: var(--color-secondary);
  border-radius: 5px;
}
.navbar-container * {
  display: flex;
  margin: 0;
  padding: 0;
}
.navbar {
  padding: 0;
  margin: 0;
  list-style-type: none;
  padding: 10px;
}
.navbar li a {
  text-decoration: none;
  padding: 10px;
}
a:link {
  color: rgb(0, 0, 0); 
}
a:visited {
  color:inherit;
}
.navbar .dropdown-content {
  background-color: var(--color-secondary);
  visibility: hidden;
  opacity: 0;
  position: absolute;
  transition: all 0.5s ease;
  border-radius: 5px;
  margin-top: 1rem;
  top: 40px;
  left: auto;
  display: none; 
  z-index: 1;
  padding: 10px;
}


.navbar .dropdown:hover .dropdown-content {
  visibility: visible;
  flex-flow: column;
  align-items: center;
  opacity: 1;
  display: block;
}

@media screen and (prefers-color-scheme: dark) {
  body {
    background-color: var(--dark-color-bkg);
    color: #fff;
  }
  .navbar {
    color: rgb(255, 255, 255);
    background-color: var(--dark-color-secondary);
  }
  .navbar .dropdown-content {
    background-color: var(--dark-color-secondary);
    color: rgb(255, 255, 255);
  }
  a:link {
   color: rgb(255, 255, 255); 
  }
  a:visited {
    color:inherit;
  }
}

